opensym: update html slides

--- a/opensym2016/slides.html
+++ b/opensym2016/slides.html
@@ -34,138 +34,153 @@
   <h3 class="date">Lyudmila Vaseva (vaseva@mi.fu-berlin.de)</h3>
 </section>
 
-<section id="march-2013" class="slide level1" data-background="images/nerd_space.jpg" >
+<section id="march-2013" class="slide level1">
 <h1>March 2013</h1>
 </section>
-<section id="march-2013" class="slide level1" data-background="images/lost-places.jpg">
-<h1>March 2013</h1>
-</section>
-<section class="slide level1" data-background="images/friends_2.jpg">
 
-<ul>
-<li class="fragment"><img src="images/logo_freifunknet.png" title="fig:" /></li>
-</ul>
+<section class="slide level1" data-background="images/flickr_freifunk.jpg">
 </section>
-<section id="exkurs-community-networks" class="slide level1">
-<h1>Exkurs: Community Networks</h1>
-<ul>
-<li class="fragment">free, decentralised communication infrastructure set up and managed by its users</li>
-<li class="fragment">free firmware</li>
-<li class="fragment">free access to the network for everyone with a wifi capable device</li>
-<li class="fragment">information is passed along without tampering or prioritising</li>
-</ul>
+
+<section class="slide level1" data-background="images/flickr_freifunk2.jpg">
 </section>
+
+<section>
+  <section class="slide level1" data-background="images/friends_2.jpg">
+  <ul>
+  <li class="fragment"><img src="images/Freifunk.net.svg.png" title="fig:" /></li>
+  </ul>
+  </section>
+
+  <section id="exkurs-community-networks" class="slide level1">
+  <h1>Community Networks</h1>
+  <ul>
+  <li class="fragment">free, decentralised communication infrastructure set up and managed by its users</li>
+  <li class="fragment">free firmware</li>
+  <li class="fragment">free access to the network for everyone with a wifi capable device</li>
+  <li class="fragment">information is passed along without tampering or prioritising</li>
+  </ul>
+  </section>
+</section>
+
 <section id="august-2016" class="slide level1">
 <h1>August 2016</h1>
 </section>
 <section id="why" class="slide level1">
 <h1>Why?</h1>
 </section>
-<section id="threats-to-validity" class="slide level1">
-<h1>Threats to Validity</h1>
-<ol type="1">
-<li class="fragment">Alexander Hars and Shaosong Ou, &quot;Working for Free? Motivations for Participating in Open-Source Projects&quot;, Int. J. Electron. Commerce, 6(3):25–39, 2002.</li>
-<li class="fragment">Karim Lakhani and Robert Wolf, &quot;Why Hackers Do What They Do: Understanding Motivation in Free/Open Source Software Projects&quot;, MIT Press, Cambridge, 2005.</li>
-</ol>
-<p>note: don't want transitions here!</p>
+
+<section class="slide level1">
+<blockquote>
+<p>Alexander Hars and Shaosong Ou, &quot;Working for Free? Motivations for Participating in Open-Source Projects&quot;, Int. J. Electron. Commerce, 6(3):25–39, 2002.</p>
+</blockquote>
+<blockquote>
+<p>Karim Lakhani and Robert Wolf, &quot;Why Hackers Do What They Do: Understanding Motivation in Free/Open Source Software Projects&quot;, MIT Press, Cambridge, 2005.</p>
+</blockquote>
+</section>
+
+<section id="methods" class="slide level1">
+<h1>Methods</h1>
+<ul>
+<li class="fragment">semi-structured interviews</li>
+<li class="fragment">questions inspired by floss papers</li>
+<li class="fragment">16 participants</li>
+<li class="fragment">raw data: https://github.com/lusy/motivationFF/blob/master/ff_umfrage</li>
+</ul>
 </section>
 <section id="organisation-of-the-findings" class="slide level1">
 <h1>Organisation of the findings</h1>
 <figure>
 <img src="images/motivation_continuum.png" alt="motivations continuum" /><figcaption>motivations continuum</figcaption>
 </figure>
+<blockquote>
 <p>Richard M. Ryan and Edward L. Deci, &quot;Intrinsic and extrinsic motivations: Classic definitions and new directions&quot;, Contemporary Educational Psychology, 25:54–67, 2000.</p>
-</section>
-<section id="why-have-you-started-to-participate-in-freifunk-whats-cool-about-the-project" class="slide level1">
-<h1>Why have you started to participate in Freifunk? What's cool about the project?</h1>
-<p>(Motivations overview / Otöne) --&gt; vlt auch zu den jeweiligen &quot;Kapitel&quot; runterziehen</p>
-</section>
-<section class="slide level1">
-
-<ul>
-<li class="fragment">&quot;I liked the idea of connecting people in a decentralised, non-commercial manner&quot;</li>
-<li class="fragment">&quot;It's a charming idea: to radio with each other, to do things with the network, to connect people in the hood, to do community based work (not only Internet related)&quot;</li>
-<li class="fragment">&quot;it was the refugee context: I found it important to provide a communication infrastructure to people who don't have one.&quot;</li>
-<li class="fragment">&quot;I've founded it^^&quot;</li>
-<li class="fragment">&quot;There was no (usable) Internet in Friedrichshein till 2003&quot;</li>
-<li class="fragment">&quot;Intersection community -- technic is intriguing&quot;</li>
-<li class="fragment">&quot;the legal regulations changed, so it was at once possible to freely deploy wifi networks&quot;</li>
-<li class="fragment">&quot;from today's perspective: how big it has become&quot;</li>
-<li class="fragment">&quot;I've learnt a lot about how communities work and don't, how much structure is helpful/not, what voluntary work means, what tasks get ignored and why, what should be decided at all costs and who decides, ...&quot;</li>
-</ul>
+</blockquote>
 </section>
 <section class="slide level1">
 
 <h2 id="extrinsic-motivation-expectation-of-a-future-reward">Extrinsic Motivation: expectation of a future reward</h2>
 <ul>
-<li class="fragment">no monetary compensation</li>
-<li class="fragment">not seen as networking/visibility platform</li>
-<li class="fragment">polish technical skills, learn about (wifi mesh) networks (6 of 16 people)</li>
-<li class="fragment">&quot;learnt a lot about network technic (there's scarcely another free time project where you can learn so much about it)&quot;</li>
+<li class="fragment">no monetary compensation FLOSS Hars and Ou(2002): 30%; Lakhani and Wolf(2005): 40%</li>
+<li class="fragment">not seen as networking/visibility platform FLOSS Hars and Ou(2002): 36.7%; Lakhani and Wolf(2005): 17.5%</li>
+<li class="fragment">polish technical skills, learn about (wifi mesh) networks (6 of 16 people) FLOSS Hars and Ou(2002): 88%; Lakhani and Wolf(2005): 41.3%</li>
+<li class="fragment"><q>&ldquo;learnt a lot about network technology (there's scarcely another free time project where you can learn so much about it)&rdquo;</q></li>
 </ul>
-<p>~ (TODO: transition!) <span class="math inline">\(\rightarrow\)</span> byproduct, not a primary source of motivation</p>
+<p class="fragment"><span class="math inline">\(\rightarrow\)</span> byproduct, not a primary source of motivation</p>
 </section>
 <section class="slide level1">
 
 <h2 id="extrinsic-motivation-satisfying-personal-needs">Extrinsic Motivation: satisfying (personal) needs</h2>
 <ul>
-<li class="fragment">Before 2008: &quot;There was no (usable) Internet in Friedrichshein in 2003&quot;</li>
-<li class="fragment">After: &quot;share the own internet connection with people who need it! (today, primarily refugees)&quot;</li>
+<li class="fragment">FLOSS: Hars and Ou(2002): 38%; Lakhani and Wolf(2005): 58.7%</li>
+<li class="fragment">Before 2008: <q>&ldquo;There was no (usable) Internet in Friedrichshain in 2003&rdquo;</q> (2 out of 16 people)</li>
+<li class="fragment">After: <q>&ldquo;share the own Internet connection with people who need it! (today, primarily refugees)&rdquo;</q> (6 out of 16 people)</li>
 </ul>
 </section>
 <section class="slide level1">
 
 <h2 id="extrinsic-motivation-expected-approval-from-self-or-others">Extrinsic Motivation: expected approval from self or others</h2>
 <ul>
-<li class="fragment">&quot;it's cool to have the feeling that people need you&quot;</li>
-<li class="fragment">&quot;you can see that people use it (refugees; students; positive feedback)&quot;</li>
+<li class="fragment">FLOSS: Hars and Ou(2002): 43%; Lakhani and Wolf(2005): 11%</li>
+<li class="fragment">2 out of 16 people</li>
+<li class="fragment"><q>&ldquo;it's cool to have the feeling that people need you&rdquo;</q></li>
+<li class="fragment"><q>&ldquo;you can see that people use it (refugees; students; positive feedback)&rdquo;</q></li>
 </ul>
 </section>
 <section class="slide level1">
 
 <h2 id="extrinsic-motivation-feeling-as-a-part-of-a-community">Extrinsic Motivation: feeling as a part of a community</h2>
 <ul>
-<li class="fragment">&quot;building a project together with others&quot;</li>
-<li class="fragment">&quot;I've grown to love the community&quot;</li>
-<li class="fragment">&quot;collaborating with and getting to know people of different ages and backgrounds, which would have hardly happened in a different setting&quot;</li>
-<li class="fragment">&quot;one gets to know interesting and different people, comes out of one's comfort zone and social bubble&quot;</li>
+<li class="fragment">8 out of 16 people</li>
+<li class="fragment"><q>&ldquo;building a project together with others&rdquo;</q></li>
+<li class="fragment"><q>&ldquo;I've grown to love the community&rdquo;</q></li>
+<li class="fragment"><q>&ldquo;collaborating with and getting to know people of different ages and backgrounds, which would have hardly happened in a different setting&rdquo;</q></li>
+<li class="fragment"><q>&ldquo;one gets to know interesting and different people, comes out of one's comfort zone and social bubble&rdquo;</q></li>
 <li class="fragment">the intersection of community and technology: the most interesting part of the Freifunk project</li>
+<li class="fragment">FLOSS: Hars and Ou(2002): 27.8%; Lakhani and Wolf(2005): 83%</li>
 </ul>
 </section>
 <section class="slide level1">
 
 <h2 id="extrinsic-motivation-ideology">Extrinsic Motivation: ideology</h2>
 <ul>
-<li class="fragment">&quot;there is a right to free communication and information&quot;</li>
-<li class="fragment">&quot;free, decentralised communication infrastructure built and managed by the people who use it and not by the state or business players&quot;</li>
-<li class="fragment">&quot;independent network, cannot be switched off by a single person&quot;</li>
-<li class="fragment">&quot;decentralised infrastructure is good, but it also makes things difficult&quot;</li>
+<li class="fragment">FLOSS: Hars and Ou(2002): n/a; Lakhani and Wolf(2005): 33.1%</li>
+<li class="fragment">16 out of 16 people</li>
+<li class="fragment"><q>&ldquo;free, decentralised communication infrastructure built and managed by the people who use it and not by the state or business players&rdquo;</q></li>
+<li class="fragment"><q>&ldquo;independent network, cannot be switched off by a single person&rdquo;</q></li>
 </ul>
-<p>~ (TODO: transition!) <span class="math inline">\(\rightarrow\)</span> political aspect plays a very central role</p>
+<p class="fragment"> <span class="math inline">\(\rightarrow\)</span> political aspect plays a very central role</p>
 </section>
 <section class="slide level1">
 
 <h2 id="intrinsic-motivation">Intrinsic Motivation</h2>
 <ul>
+<li class="fragment">FLOSS: Hars and Ou(2002): 79.7%; Lakhani and Wolf(2005): 44.9%</li>
 <li class="fragment">technically interesting/challenging (14 out of 16 people)</li>
-<li class="fragment">&quot;there's stuff you can physically touch (more tangible compared to coding), it makes you happy :)&quot;</li>
-<li class="fragment">&quot;you can climb on church towers and look at the city from above, which is pretty cool :)&quot;</li>
-<li class="fragment">&quot;it's technically challenging despite the fact that I've abandoned the idea that it could be an alternative to the last mile of the German Telekom&quot;</li>
-<li class="fragment">&quot;challenge: to get maximal results with minimal resources&quot;</li>
+<li class="fragment"><q>&ldquo;there's stuff you can physically touch (more tangible compared to coding), it makes you happy :)&rdquo;</q></li>
+<li class="fragment"><q>&ldquo;you can climb on church towers and look at the city from above, which is pretty cool :)&rdquo;</q></li>
+<li class="fragment"><q>&ldquo;it's technically challenging despite the fact that I've abandoned the idea that it could be an alternative to the last mile of the German Telekom&rdquo;</q></li>
+<li class="fragment"><q>&ldquo;challenge: to get maximal results with minimal resources&rdquo;</q></li>
 </ul>
 </section>
-<section id="conclusions" class="slide level1">
-<h1>Conclusions</h1>
+<section id="summing-up" class="slide level1">
+<h1>Summing up</h1>
 <ul>
 <li class="fragment">ideology is important motive for everyone in Freifunk</li>
 <li class="fragment">differences in the motivations to join in different &quot;generations&quot; (pre/post 2008)</li>
-<li class="fragment">evolve motivations over time? -- diverse project, many different aspects, keeping long time contributors possible</li>
-<li class="fragment">asking more people and more elaborate questions would be cool</li>
-<li class="fragment">comparison between different projects would be even cooler</li>
+</ul>
+</section>
+<section id="further-research" class="slide level1">
+<h1>Further research</h1>
+<ul>
+<li class="fragment">wide palette of motivations - further research would be insightful</li>
+<li class="fragment">evolve motivations over time? - diverse project, many different aspects, keeping long time contributors possible</li>
+<li class="fragment">asking more people and more elaborate questions would be interesting</li>
+<li class="fragment">comparison between different projects would be even more interesting</li>
 </ul>
 </section>
 <section id="thank-you" class="slide level1">
 <h1>Thank you!</h1>
+<p>https://github.com/lusy/motivationFF</p>
 </section>
 <section id="license" class="slide level1">
 <h1>License</h1>
