opensym: add pic sources to slides

--- a/opensym2016/slides.html
+++ b/opensym2016/slides.html
@@ -39,15 +39,20 @@
 </section>
 
 <section class="slide level1" data-background="images/flickr_freifunk.jpg">
+  <small>Khaipi (CC-BY 2.0)  https://www.flickr.com/photos/khaipi/2472362868/</small>
 </section>
 
 <section class="slide level1" data-background="images/flickr_freifunk2.jpg">
+  <small>Khaipi (CC-BY 2.0)  https://www.flickr.com/photos/khaipi/2471541737/</small>
 </section>
 
 <section>
   <section class="slide level1" data-background="images/friends_2.jpg">
   <ul>
-  <li class="fragment"><img src="images/Freifunk.net.svg.png" title="fig:" /></li>
+  <li class="fragment"><img src="images/Freifunk.net.svg.png" title="fig:" />
+      <small font-color='black'> https://de.wikipedia.org/wiki/Datei:Freifunk.net.svg
+       (CC-BY-SA 2.5) </small>
+  </li>
   </ul>
   </section>
 
